--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "2048",
   "private": true,
+  "homepage": "https://karanelus.github.io/2048",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0",
